BusOne/src/objects/Coaching_Report_vod__c.object
<CustomObject>
    <description>The Coaching Reports object is used for rating and assessment of reps by their managers.</description>
    <fields>
        <fullName>Business_Account_Planning__c</fullName>
        <description>Business account planning rating.</description>
        <inlineHelpText>5 – Superior
4 – Exceeds expectations
3 – Meets expectations
2 – Below expectations
1 – Poor</inlineHelpText>
        <label>Business Account Planning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Productivity__c</fullName>
        <description>Call productivity rating.</description>
        <inlineHelpText>5 – Superior
4 – Exceeds expectations
3 – Meets expectations
2 – Below expectations
1 – Poor</inlineHelpText>
        <label>Call Productivity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Overall performance development comments for the sales representative.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Focus__c</fullName>
        <description>Customer focus rating.</description>
        <inlineHelpText>5 – Superior
4 – Exceeds expectations
3 – Meets expectations
2 – Below expectations
1 – Poor</inlineHelpText>
        <label>Customer Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The rep being rated.</description>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Reports1_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Knowledge_Expertise__c</fullName>
        <description>Knowledge expertise rating.</description>
        <inlineHelpText>5 – Superior
4 – Exceeds expectations
3 – Meets expectations
2 – Below expectations
1 – Poor</inlineHelpText>
        <label>Knowledge Expertise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager that is filling out the rating.</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Reports_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Internal field used to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <description>Overall rating.</description>
        <formula>(VALUE(TEXT( Business_Account_Planning__c ))+ VALUE(TEXT(Call_Productivity__c)) +  VALUE(TEXT(Customer_Focus__c)) + VALUE(TEXT(Knowledge_Expertise__c)) +  VALUE(TEXT(Strategic_Planning__c )))/5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Rating</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <description>Date the review was filled out.</description>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Period__c</fullName>
        <description>Time period that the performance review refers to.</description>
        <label>Review Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
                <value>
                    <fullName>YTD</fullName>
                </value>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the review.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Completed – Rep Approved</fullName>
                </value>
                <value>
                    <fullName>Completed – Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Planning__c</fullName>
        <description>Strategic planning rating.</description>
        <inlineHelpText>5 – Superior
4 – Exceeds expectations
3 – Meets expectations
2 – Below expectations
1 – Poor</inlineHelpText>
        <label>Strategic Planning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Coaching Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000000}</displayFormat>
        <label>Coaching Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coaching Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>